@@ -152,11 +152,12 @@
                      (get-option gnc:pagename-general 
                                  optname-date))))
 	  (report-title (get-option gnc:pagename-general
-				    optname-reportname))
+				    gnc:optname-reportname))
           (doc (gnc:make-html-document))
 	  (txt (gnc:make-html-text)))
 
-      (gnc:html-document-set-title! doc report-title))
+      (gnc:html-document-set-title! doc report-title)
+
       (if (not (null? accounts))
 	  ;; if no max. tree depth is given we have to find the
 	  ;; maximum existing depth
@@ -194,7 +195,8 @@
 	  ;; error condition: no accounts specified
 	  (gnc:html-document-add-object! 
 	   doc 
-	   (gnc:html-make-no-account-warning report-title))
+	   (gnc:html-make-no-account-warning report-title)))
+
       doc))
 
   (gnc:define-report 
